Fixed issue with overlapping element on links

--- a/static/css/docs.css
+++ b/static/css/docs.css
@@ -1315,6 +1315,7 @@ p {
   margin-top: -60px;
   height: 60px;
   visibility: hidden;
+  pointer-events: none;
 }
 
 .userContent h2 {
@@ -1360,6 +1361,8 @@ p {
 
 .userContent a {
   color: #0291DB;
+  position: relative;
+  z-index: 1;
 }
 
 .userContent code {
